--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
 .sidebar{
 	width: 30%;
 	display: inline-block;
-	text-align:
+	padding: 25px;
+
 }
 
 #teams{
@@ -16,6 +17,7 @@ body {
 	left: 40%;
 	width: 58%;
 	display: inline-block;
+	margin: 10px;
 }
 
 .btn{
